--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tribute page pen</title>
-  <link rel="stylesheet" href="http://philezemonye.github.io/css/styles.css">
+  <link rel="stylesheet" href="http://philezemonye.github.io/styles.css">
   
   
       <link rel="stylesheet" href="css/style.css">
